WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311702
[Android] Fix compilation errors when building with USE_GBM=OFF
https://bugs.webkit.org/show_bug.cgi?id=311702
Summary
[Android] Fix compilation errors when building with USE_GBM=OFF
lmm128
Reported
2026-04-07 20:41:59 PDT
Some recent changes fails to compile when building without GBM, which is the case with the Android port. Added #if's where applicable.
Attachments
Add attachment
proposed patch, testcase, etc.
lmm128
Comment 1
2026-04-07 20:44:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62246
Radar WebKit Bug Importer
Comment 2
2026-04-14 20:42:12 PDT
<
rdar://problem/174800500
>
EWS
Comment 3
2026-04-29 11:36:12 PDT
Committed
312306@main
(576a771d6acb): <
https://commits.webkit.org/312306@main
> Reviewed commits have been landed. Closing PR #62246 and removing active labels.
EWS
Comment 4
2026-04-29 14:30:13 PDT
Committed
312315@main
(bdfa5ec37850): <
https://commits.webkit.org/312315@main
> Reviewed commits have been landed. Closing PR #63926 and removing active labels.
Robert Jenner
Comment 5
2026-04-29 14:33:15 PDT
Hello! We had to revert
312306@main
because it broke every build in our infrastructure. We Saw the failures also hit OpenSource EWS. Here's an example link:
https://ews-build.webkit.org/#/builders/159/builds/32924
, and here is the complete build log:
https://s3-us-west-2.amazonaws.com/ews-archives.webkit.org/ios-26-arm64-release-compile-webkit/2625f493-32924.txt
We had successful builds at
312305@main
, with all builds starting to fail at
312306@main
. The change was reverted in:
https://commits.webkit.org/312315@main
Robert Jenner
Comment 6
2026-04-29 14:38:08 PDT
I will also note that on your EWS run there were failures in: ios-safer-cpp:
https://ews-build.webkit.org/#/builders/174/builds/16845
And it failed to build for visionos-sim:
https://ews-build.webkit.org/#/builders/160/builds/32536
and watchOS-26:
https://ews-build.webkit.org/#/builders/163/builds/31840
When re-landing you will need to address those failures, and wait for a complete pass in all of EWS.
Alejandro G. Castro
Comment 7
2026-04-29 14:53:38 PDT
Thanks for the information and sorry for the mess 🙏, I thought it was a false positive just in those configurations from a stale compilation file because it just failed in some configuration and unrelated code that worked before. We will check the problem and try to land it again.
Alejandro G. Castro
Comment 8
2026-04-30 04:41:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63966
EWS
Comment 9
2026-05-04 01:06:15 PDT
Committed
312509@main
(624815e2d740): <
https://commits.webkit.org/312509@main
> Reviewed commits have been landed. Closing PR #63966 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug