[Android] Fix compilation errors when building with USE_GBM=OFF

https://bugs.webkit.org/show_bug.cgi?id=311702

Reviewed by Adrian Perez de Castro.

Some recent changes introduced compilation errors when building without GBM, which is the case with the Android port.
Added #if's where applicable.
Reworked DMABufBuffer and DMABufBufferAttributes to make it work with both GBM ON and OFF.

Combined changes:

* Source/WebCore/PlatformGTK.cmake:
* Source/WebCore/PlatformWPE.cmake:
* Source/WebCore/SourcesGTK.txt:
* Source/WebCore/SourcesWPE.txt:
* Source/WebCore/platform/TextureMapper.cmake:
* Source/WebCore/platform/graphics/DMABufBuffer.cpp: Renamed from Source/WebCore/platform/graphics/gbm/DMABufBuffer.cpp.
* Source/WebCore/platform/graphics/DMABufBuffer.h: Renamed from Source/WebCore/platform/graphics/gbm/DMABufBuffer.h.
* Source/WebCore/platform/graphics/DMABufBufferAttributes.h: Renamed from Source/WebCore/platform/graphics/gbm/DMABufBufferAttributes.h.
* Source/WebKit/PlatformGTK.cmake:
* Source/WebKit/PlatformWPE.cmake:
* Source/WebKit/Scripts/webkit/messages.py:
(conditions_for_header):
(headers_for_type):
* Source/WebKit/Shared/glib/DMABufBufferAttributes.serialization.in: Renamed from Source/WebKit/Shared/gbm/DMABufBuffer.serialization.in.
* Source/WebKit/UIProcess/gtk/AcceleratedBackingStore.cpp:
* Source/WebKit/UIProcess/gtk/AcceleratedBackingStore.h:
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp:
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.h:

Canonical link: https://commits.webkit.org/312509@main